# science

./: .gitignore  README.md
docker/: .env.example  .gitignore  .node.example  __docker-network-setup.sh  docker-compose.yml  docker-run.sh  update-dependency.sh  web_build.sh
docker/anaconda/: Dockerfile  jupyter_notebook_config.py  requirements.txt
docker/anaconda/nbconfig/: notebook.json
docker/chromium/: Dockerfile
docker/logrotate/: Dockerfile
docker/mongodb/: Dockerfile  mongod.conf  user_db_add_default.sh
docker/nginx/: Dockerfile  nginx.conf  upstream.conf
docker/nginx/common/: common.conf  fastapi_proxy.conf  jupyter.conf  node_proxy.conf  static.common.conf
docker/nginx/sites-available/: http.conf
docker/nodejs/: Dockerfile
docker/router/: .env.example  docker-compose.yml  docker-network.sh
docker/router/certbot/: Dockerfile  certbot-certonly.sh
docker/router/haproxy/: Dockerfile  haproxy.cfg
docker/selenium/: Dockerfile
nodejs/: .gitignore  README.md  package.json  vue.config.js
nodejs/public/: index.html
nodejs/src/: App.vue  main.js
nodejs/src/components/: ContentMenuTree.vue  FullLayoutNav.vue
nodejs/src/layouts/: FullLayout.vue  NoLayout.vue  SingleLayout.vue
nodejs/src/plugins/: analytics.js  common.js  message.js  vuetify.js
nodejs/src/router/: index.js  (+1 more)
python/: .env.example  .gitignore  README.md  api.py  pyproject.toml  update-dependency.sh
python/app/configs/: api.py  app.py  database.py
python/app/http/routes/: route.py
python/app/models/account/: role.py  user.py
python/app/providers/: app_provider.py
(+6 files in other folders)
